--- a/a-fantastica-fabrica-de-conhecimento.html
+++ b/a-fantastica-fabrica-de-conhecimento.html
@@ -14,7 +14,7 @@
         <meta property="og:site_name" content="Ícaro Medeiros" />
             <meta property="og:type" content="article"/>
             <meta property="og:title" content="A fantástica fábrica de conhecimento"/>
-            <meta property="og:url" content="./a-fantastica-fabrica-de-conhecimento.html"/>
+            <meta property="og:url" content="http://www.icaromedeiros.com.br/a-fantastica-fabrica-de-conhecimento.html"/>
             <meta property="og:description" content="É só pensar nas primeiras palavras que nos vêm a cabeça sobre o conteúdo de uma página Web e digitar numa caixinha e mandar pro Digg, pro Del.icio.us, pro flickr. Aí se organiza contéudo! Fácil né?! Imagine um supermercado você pode colocar etiquetas em vinhos para classificá-los. Você ..."/>
             <meta property="article:published_time" content="2008-10-23" />
                 <meta property="article:section" content="Blog" />
@@ -24,12 +24,14 @@
                 <meta property="article:author" content="Ícaro Medeiros" />
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="./theme/css/bootstrap.sandstone.min.css" type="text/css"/>
-    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/bootstrap.sandstone.min.css" type="text/css"/>
+    <link href="http://www.icaromedeiros.com.br/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="./theme/css/pygments/monokai.css" rel="stylesheet">
-    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
+    <link href="http://www.icaromedeiros.com.br/theme/css/pygments/monokai.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://www.icaromedeiros.com.br/theme/css/style.css" type="text/css"/>
 
+        <link href="http://www.icaromedeiros.com.br/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Ícaro Medeiros ATOM Feed"/>
 
 </head>
 <body>
@@ -43,23 +45,23 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="./" class="navbar-brand">
+            <a href="http://www.icaromedeiros.com.br/" class="navbar-brand">
 Ícaro Medeiros            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="./category/blog.html">Blog</a>
+                            <a href="http://www.icaromedeiros.com.br/category/blog.html">Blog</a>
                         </li>
-                         <li><a href="./pages/about.html">
+                         <li><a href="http://www.icaromedeiros.com.br/pages/about.html">
                              About
                           </a></li>
-                         <li><a href="./pages/talks.html">
+                         <li><a href="http://www.icaromedeiros.com.br/pages/talks.html">
                              Talks
                           </a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="./archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+                <li><a href="http://www.icaromedeiros.com.br/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -70,8 +72,8 @@
     <div class="row">
         <div class="col-sm-9">
             <ol class="breadcrumb">
-                <li><a href="." title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
-                <li><a href="./category/blog.html" title="Blog">Blog</a></li>
+                <li><a href="http://www.icaromedeiros.com.br" title="Ícaro Medeiros"><i class="fa fa-home fa-lg"></i></a></li>
+                <li><a href="http://www.icaromedeiros.com.br/category/blog.html" title="Blog">Blog</a></li>
                 <li class="active">A fantástica fábrica de conhecimento</li>
             </ol>
 
@@ -79,7 +81,7 @@
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="./a-fantastica-fabrica-de-conhecimento.html"
+                    <a href="http://www.icaromedeiros.com.br/a-fantastica-fabrica-de-conhecimento.html"
                        rel="bookmark"
                        title="Permalink to A fantástica fábrica de conhecimento">
                         A fantástica fábrica de conhecimento
@@ -98,11 +100,11 @@
 
 
     <p> <span class="label label-default">Tags</span>
-	<a href="./tag/folksonomy.html">folksonomy</a>
+	<a href="http://www.icaromedeiros.com.br/tag/folksonomy.html">folksonomy</a>
         /
-	<a href="./tag/social-tagging.html">social tagging</a>
+	<a href="http://www.icaromedeiros.com.br/tag/social-tagging.html">social tagging</a>
         /
-	<a href="./tag/tagging.html">tagging</a>
+	<a href="http://www.icaromedeiros.com.br/tag/tagging.html">tagging</a>
  </p>
     
 </footer><!-- /.post-info -->                    </div>
@@ -166,190 +168,190 @@ Não se pode dizer que "tinto suave" é uma sub-categoria de "tinto".</p>
 
 
 
-                <li class="list-group-item"><a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+                <li class="list-group-item"><a href="http://www.icaromedeiros.com.br/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                     <ul class="list-group list-inline tagcloud" id="tags">
                         <li class="list-group-item tag-4">
-                            <a href="./tag/alagoas.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/alagoas.html">
                                 alagoas
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/blogging.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/blogging.html">
                                 blogging
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/computer-science.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/computer-science.html">
                                 computer science
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/debian.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/debian.html">
                                 debian
                             </a>
                         </li>
                         <li class="list-group-item tag-1">
-                            <a href="./tag/folksonomy.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/folksonomy.html">
                                 folksonomy
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/free-software.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/free-software.html">
                                 free software
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/google.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/google.html">
                                 google
                             </a>
                         </li>
                         <li class="list-group-item tag-2">
-                            <a href="./tag/information-retrieval.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/information-retrieval.html">
                                 information retrieval
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/knowledge-reasoning.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/knowledge-reasoning.html">
                                 knowledge reasoning
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/knowledge-representation.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/knowledge-representation.html">
                                 knowledge representation
                             </a>
                         </li>
                         <li class="list-group-item tag-2">
-                            <a href="./tag/linked-data.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/linked-data.html">
                                 linked data
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/linux.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/linux.html">
                                 linux
                             </a>
                         </li>
                         <li class="list-group-item tag-2">
-                            <a href="./tag/machine-learning.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/machine-learning.html">
                                 machine learning
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/metadata.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/metadata.html">
                                 metadata
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/microformats.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/microformats.html">
                                 microformats
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/ontologies.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/ontologies.html">
                                 ontologies
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/ontology-learning.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/ontology-learning.html">
                                 ontology learning
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/owl.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/owl.html">
                                 owl
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/philosophy.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/philosophy.html">
                                 philosophy
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/programming.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/programming.html">
                                 programming
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/rdf.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/rdf.html">
                                 rdf
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/rdfa.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/rdfa.html">
                                 rdfa
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/rss.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/rss.html">
                                 rss
                             </a>
                         </li>
                         <li class="list-group-item tag-1">
-                            <a href="./tag/semantic-web.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/semantic-web.html">
                                 semantic web
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/semantic-wikis.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/semantic-wikis.html">
                                 semantic wikis
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/social-networks.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/social-networks.html">
                                 social networks
                             </a>
                         </li>
                         <li class="list-group-item tag-1">
-                            <a href="./tag/social-tagging.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/social-tagging.html">
                                 social tagging
                             </a>
                         </li>
                         <li class="list-group-item tag-2">
-                            <a href="./tag/tag-suggestion.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/tag-suggestion.html">
                                 tag suggestion
                             </a>
                         </li>
                         <li class="list-group-item tag-1">
-                            <a href="./tag/tagging.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/tagging.html">
                                 tagging
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/trends.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/trends.html">
                                 trends
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/twitter.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/twitter.html">
                                 twitter
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/web.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/web.html">
                                 web
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/web-20.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/web-20.html">
                                 web 2.0
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/web-search.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/web-search.html">
                                 web search
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/wikis.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/wikis.html">
                                 wikis
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/wolfram.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/wolfram.html">
                                 wolfram
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="./tag/wolfram-alpha.html">
+                            <a href="http://www.icaromedeiros.com.br/tag/wolfram-alpha.html">
                                 wolfram alpha
                             </a>
                         </li>
@@ -413,13 +415,13 @@ Não se pode dizer que "tinto suave" é uma sub-categoria de "tinto".</p>
       </div>
    </div>
 </footer>
-<script src="./theme/js/jquery.min.js"></script>
+<script src="http://www.icaromedeiros.com.br/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="./theme/js/bootstrap.min.js"></script>
+<script src="http://www.icaromedeiros.com.br/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="./theme/js/respond.min.js"></script>
+<script src="http://www.icaromedeiros.com.br/theme/js/respond.min.js"></script>
 
     <!-- GitHub JS -->
     <script type="text/javascript">
@@ -427,7 +429,7 @@ Não se pode dizer que "tinto suave" é uma sub-categoria de "tinto".</p>
             if (!window.jXHR) {
                 var jxhr = document.createElement('script');
                 jxhr.type = 'text/javascript';
-                jxhr.src = './theme/js/jXHR.js';
+                jxhr.src = 'http://www.icaromedeiros.com.br/theme/js/jXHR.js';
                 var s = document.getElementsByTagName('script')[0];
                 s.parentNode.insertBefore(jxhr, s);
             }
@@ -440,7 +442,24 @@ Não se pode dizer que "tinto suave" é uma sub-categoria de "tinto".</p>
             });
         });
     </script>
-    <script src="./theme/js/github.js" type="text/javascript"></script>
+    <script src="http://www.icaromedeiros.com.br/theme/js/github.js" type="text/javascript"></script>
     <!-- End GitHub JS Code -->
+    <!-- Google Analytics -->
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-53907792-1']);
+        _gaq.push(['_trackPageview']);
+
+        (function () {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+    <!-- End Google Analytics Code -->
 </body>
 </html>
